<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="txt_main_title">My Nanodegree Apps!</string>

    <string name="btn_txt_spotify_streamer">Spotify Streamer</string>
    <string name="btn_txt_score_app">Score App</string>
    <string name="btn_txt_library_app">Library App</string>
    <string name="btn_txt_build_it_bigger">Build It Bigger</string>
    <string name="btn_txt_xyz_reader">XYZ Reader</string>
    <string name="btn_txt_capstone">Capstone: My own app</string>


    <string name="msg_spotify_streamer">This button will launch Spotify Streamer app</string>
    <string name="msg_score_app">This button will launch Score app</string>
    <string name="msg_library_app">This button will launch Library app</string>
    <string name="msg_build_it_bigger">This button will launch Build It Bigger app</string>
    <string name="msg_xyz_reader">This button will launch XYZ Reader app</string>
    <string name="msg_capstone">This button will launch my capstone app</string>
</resources>
