<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/txt_main_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_sportify_streamer"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_txt_spotify_streamer"
                />

            <Button
                android:id="@+id/btn_score_app"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_txt_score_app"
                />

            <Button
                android:id="@+id/btn_library_app"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_txt_library_app"
                />

            <Button
                android:id="@+id/btn_build_it_bigger"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_txt_build_it_bigger"
                />

            <Button
                android:id="@+id/btn_xyz_reader"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_txt_xyz_reader"
                />

            <Button
                android:id="@+id/btn_capstone"
                style="@style/Button.MyApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_txt_capstone"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>